admin lists table

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_BASE_URL=https://ff6f-105-113-72-171.ngrok-free.app/api/admin
+REACT_APP_API_BASE_URL=https://on-noble-frog.ngrok-free.app/api/admin
 
